<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="es.albertoheredia.apppizzeria.MainActivity">


    <Button
        android:id="@+id/btnTerminar"
        style="@style/EstiloBoton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/tVPersonalizar"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/tVPersonalizar"
        android:layout_marginBottom="28dp"
        android:text="@string/pia_btn_terminar"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnPersonalizar"
        style="@style/EstiloBoton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/tVPersonalizar"
        android:layout_alignRight="@+id/tVPersonalizar"
        android:layout_below="@+id/tVPersonalizar"
        android:layout_marginTop="12dp"
        android:text="@string/pia_btn_propia"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tVPersonalizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tVTamano"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:text="@string/pia_tv_personalizar"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tVTamano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="43dp"
        android:text="@string/pia_tv_tamano"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rGTamano"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tVTamano"
        android:layout_alignStart="@+id/tVTamano"
        android:layout_below="@+id/tVTamano"
        android:layout_marginTop="18dp">

        <RadioButton
            android:id="@+id/rBPeque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pia_rb_peque"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rBMedi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pia_rb_medi"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rBFami"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pia_rb_fami"
            android:textStyle="bold" />
    </RadioGroup>

    <ListView
        android:id="@+id/lv_especialidad"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
