<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="es.albertoheredia.apppizzeria.MainActivity">

        <Button
            android:id="@+id/btnPedir"
            style="@style/EstiloBoton"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_above="@+id/btnConfigurar"
            android:layout_alignLeft="@+id/btnSalir"
            android:layout_alignStart="@+id/btnSalir"
            android:text="@string/mpa_btn_pedir"
            tools:layout_editor_absoluteX="78dp"
            tools:layout_editor_absoluteY="411dp"
            android:layout_marginBottom="71dp" />


    <Button
        android:id="@+id/btnConfigurar"
        style="@style/EstiloBoton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/btnPedir"
        android:layout_alignStart="@+id/btnPedir"
        android:layout_centerVertical="true"
        android:text="@string/mpa_btn_configurar"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="411dp" />

    <Button
        android:id="@+id/btnSalir"
        style="@style/EstiloBoton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@+id/btnConfigurar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/mpa_btn_salir"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="411dp"
        tools:text="Salir" />

    </RelativeLayout>